# air3_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SUPABASE_INTEGRATION.md  check_journals.py  docker-compose.yml  load_journals.py  main.py  pyproject.toml  requirements.txt  run.py
app/: config.py  constants.py  database.py  main.py  supabase_auth.py
app/agents/sub_section_agent/: agent.py
app/api/: index.py
app/data/: scimago_ranking-eda.ipynb
app/migrations/: 1-init.sql  10-add_abstract_conclusion_cols_to_structures_table.sql  11-add-unique-constraints.sql  2-grant-rights.sql  3-add_filter_fields_to_z_documents.sql  4-add_index_on_metatata_paper_id.sql  5-update_match_chunks_rpc_filter.sql  6-create_labels_and_extracted_data_tables copy.sql  7-update_labels_and_extracted_data_tables.sql  8-add_key_topics_column_to_reviews_table.sql  9-create-sections-table.sql
app/routers/: data_ingestion.py  items.py  journals.py  papers.py  pdf.py  review_generation.py  users.py
app/schemas/: item.py  lens_api_request.py  lens_api_response.py  review_generation.py  schemas.py  search_response.py  user.py
app/services/: journals.py  lens_client.py
app/services/data_extraction/: fetch.py  (+3 more)
tests/: README.md  conftest.py  conftest_simple.py  test_auth.py  test_boolean_queries.py  test_data_extraction.py  test_data_ingestion.py  test_journals.py  test_lens_client.py  test_main.py  test_review_generation.py  test_schemas.py  test_search_endpoints.py  test_supabase_auth.py
tests/fixtures/: __init__.py  lens_api_responses.py  test_queries.py
(+7 files in other folders)
