[project]
name = "air3-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "uvicorn[standard]==0.24.0",
  "python-multipart==0.0.6",
  "pyjwt==2.8.0",
  "python-decouple==3.8",
  "sqlalchemy>=2.0.31,<3",
  "alembic>=1.15,<2",
  "requests==2.31.0",
  "pydantic>=2.11,<3",
  "fastapi>=0.116.1",
  "psycopg-binary>=3.2.9",
  "pydantic-settings>=2.8,<3",
  "email-validator>=2.1.1",
  "psycopg[binary]>=3.2.9",
  "langchain>=0.3.27",
  "tiktoken>=0.11.0",
  "pymupdf>=1.26.4",
  "langchain-openai>=0.3.32",
  "langchain-community>=0.3.27",
  "supabase>=2.16.0",
]

[tool.uv]
dev-dependencies = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "ruff==0.6.9",
  "mypy==1.11.2",
]
